--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">GeoCal</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Ciao Mondo</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">Main</string>
 
